--- a/SaturnView/SaturnView.csproj
+++ b/SaturnView/SaturnView.csproj
@@ -9,4 +9,8 @@
     <ItemGroup>
         <PackageReference Include="SkiaSharp" Version="3.119.0"/>
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\SaturnData\SaturnData\SaturnData.csproj" />
+    </ItemGroup>
 </Project>
