add new font, add hold point drawing

--- a/SaturnView/SaturnView.csproj
+++ b/SaturnView/SaturnView.csproj
@@ -13,4 +13,10 @@
     <ItemGroup>
       <ProjectReference Include="..\..\SaturnData\SaturnData\SaturnData.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="Assets\noto_plus_1.ttf">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
 </Project>
