--- a/SaturnView/SaturnView.csproj
+++ b/SaturnView/SaturnView.csproj
@@ -27,6 +27,22 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         
+         <Content Include="Assets\background_version3.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        
+         <Content Include="Assets\background_version3_clear.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        
+         <Content Include="Assets\background_boss.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        
+         <Content Include="Assets\background_boss_clear.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        
         <None Remove="Assets\noto_plus_1.ttf" />
         
         <Content Include="Assets\noto_plus_1.ttf">
